* Sep 12 2000 hship

Beef up the ShowInspector component, adding default images and rollover images, and
add parameters to allow those to be overriden.
Remove the Java Source tab from the Inspector ... turns out that shipping Java code in the
Tapestry framework confuses the Java compiler when compiling projects that depend on
the Tapestry framework.

* Sep 11 2000 hship

Add a Java Code tab to the Inspector.
Ship Java code for components and pages as resources.

* Sep 11 2000 hship

Fix some bad Javadoc links.

* Sep 10 2000 hship

Add new view to the Inspector:  Properties.
Improve CSS for the Inspector (conistent fonts and colors between images and HTML text).
Change inspector to not automatically switch to the Specification page when a new page is selected.
[113893] Rollover causes minor JavaScript problems

* Sep 8 2000 hship

Started ChangeLog for Tapestry, some time after release 0.1.3.
Added provisional image graphics for the Inspector.
Update the documentation to mention the Inspector.
Revise PropertySelection, adding the IPropertySelectionRenderer interface
and two implementation (SelectPropertySelectionRenderer and RadioPropertySelectionRenderer).
Generate a better exception message when EnumPropertySelectionModel can't find a ResourceBundle.